fix: dirty icon in recent files is not properly aligned

--- a/src/styles/Extn-NavigationAndHistory.less
+++ b/src/styles/Extn-NavigationAndHistory.less
@@ -260,3 +260,10 @@
   color: #fff;
   opacity: 1;
 }
+
+.file-status-icon.dirty {
+  position: absolute;
+  left: -4.5px;
+  top: 50%;
+  transform: translateY(-50%);
+}
